use cms gc